--- a/NodeSample/views/includePage/navigation.html
+++ b/NodeSample/views/includePage/navigation.html
@@ -2,27 +2,26 @@
         <a href="#dashboard-menu" class="nav-header" data-toggle="collapse"><i class="icon-dashboard"></i>Dashboard</a>
         <ul id="dashboard-menu" class="nav nav-list collapse in">
             <li><a href="/index">Home</a></li>
-            <li ><a href="users.html">Sample List</a></li>
-            <li ><a href="user.html">Sample Item</a></li>
-            <li ><a href="media.html">Media</a></li>
+            <li ><a href="/file/">File List</a></li>
+            <li ><a href="/mongo/index">Mongo Management</a></li>
+            <li ><a href="/todo">to do Manager</a></li>
             <li ><a href="calendar.html">Calendar</a></li>
-            
+
         </ul>
 
   <a href="#accounts-article" class="nav-header" data-toggle="collapse"><i class="icon-briefcase"></i>Article<span class="label label-info">+3</span></a>
         <ul id="accounts-article" class="nav nav-list collapse in">
-            <li ><a href="/article/articleItem">Article list</a></li>
-            <li ><a href="/article/listContext">add Article</a></li>
-            <li ><a href="reset-password.html">Search Article</a></li>
+            <li ><a href="/article/articleItem">Article Item</a></li>
+            <li ><a href="/article/listContext">Article list</a></li>
+            <li ><a href="/article/articleManager">add Article</a></li>
+            <li ><a href="/article/search">Search Article</a></li>
         </ul>
 
         <a href="#accounts-menu" class="nav-header" data-toggle="collapse"><i class="icon-briefcase"></i>Account<span class="label label-info">+3</span></a>
         <ul id="accounts-menu" class="nav nav-list collapse">
-            <li ><a href="sign-in.html">Sign In</a></li>
-            <li ><a href="/article/add">Sign Up</a></li>
-            <li ><a href="reset-password.html">Reset Password</a></li>
+            <li ><a href="/userList">user list</a></li>
+            <li ><a href="/add user">add user</a></li>
         </ul>
-
         <a href="#error-menu" class="nav-header collapsed" data-toggle="collapse"><i class="icon-exclamation-sign"></i>Error Pages <i class="icon-chevron-up"></i></a>
         <ul id="error-menu" class="nav nav-list collapse">
             <li ><a href="403.html">403 page</a></li>
