--- a/NodeSample/views/login.html
+++ b/NodeSample/views/login.html
@@ -49,6 +49,7 @@ $(function(){
         });
     }
 });
+
 </script>
 <![endif]-->
 
@@ -56,6 +57,12 @@ $(function(){
 <script src="jslib/DD_belatedPNG.js" type="text/javascript"></script>
 <script>DD_belatedPNG.fix('.png')</script>
 <![endif]-->
+<script type="text/javascript">
+    <%if(message){%>
+        alert("<%=message%>");
+    <%}%>
+
+</script>
 
 </body>
 </html>
